# adico-ai-api

./: .gitignore  LICENSE  OWNER.md  README.md  pyproject.toml  requirements-math.txt  requirements.txt  start.sh
docs/: PHI_WOLFRAM.md  TALK.md  UNIFIED.md  openapi.yaml
src/adico_ai_api/: __init__.py  __main__.py  address.py  bind_cas.py  bits64.py  cache.py  catalog.py  config.py  cosmos.py  ledger.py  math_ops.py  pipeline.py  server.py  sy_address.py  sy_lexicon.py
src/adico_ai_api/lexicon/: sefer_yetzira_limited_he.json
