[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "adico-ai-api"
version = "0.1.0"
description = "Industry-shaped deterministic ops API — local data, network life"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "כהן עובדיה עדי", email = "adico@users.noreply.github.com" }]
dependencies = []

[project.scripts]
adico-ai-api = "adico_ai_api.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
adico_ai_api = ["lexicon/*.json"]
